# Alder

./: TODO  config.xml
api/: Alder.cxx  Utilities.h.in
api/app/: ActiveRecord.cxx  ActiveRecord.h  Application.cxx  Application.h  Cineloop.cxx  Configuration.h  Database.cxx  Database.h  Image.h  ModelObject.h  Rating.cxx  Rating.h  Series.cxx  Series.h  Session.cxx  Session.h  Study.cxx  Study.h  User.cxx  User.h  Utilities.h.in
api/interface/qt/: QAboutDialog.cxx  QAboutDialog.h  QAboutDialog.ui  QAlderApplication.cxx  QAlderApplication.h  QExamNoteDialog.cxx  QExamNoteDialog.h  QExamNoteDialog.ui  QLoginDialog.cxx  QLoginDialog.h  QLoginDialog.ui  QMainAlderWindow.cxx  QMainAlderWindow.h  QMainAlderWindow.ui  QMedicalImageWidget.cxx  QMedicalImageWidget.h  QMedicalImageWidget.ui  QProgressDialog.cxx  QProgressDialog.h  QSelectInterviewDialog.cxx  QSelectInterviewDialog.h  QSelectInterviewDialog.ui  QSelectStudyDialog.cxx  QSelectStudyDialog.h  QSelectStudyDialog.ui  QStudyNoteDialog.cxx  QStudyNoteDialog.h  QStudyNoteDialog.ui  QUserListDialog.cxx  QUserListDialog.h  QUserListDialog.ui
api/model/: ActiveRecord.cxx  ActiveRecord.h  ActiveRecordWithFile.cxx  ActiveRecordWithFile.h  Application.cxx  Application.h  Cineloop.cxx  Cineloop.h  Configuration.cxx  Configuration.h  Database.cxx  Database.h  Exam.cxx  Exam.h  Image.cxx  Image.h  Interview.cxx  Interview.h  Modality.cxx  Modality.h  ModelObject.cxx  ModelObject.h  OpalService.cxx  OpalService.h  QueryModifier.cxx  QueryModifier.h  Rating.cxx  Rating.h  Session.cxx  Session.h  Study.cxx  Study.h  User.cxx  User.h
api/ui/qt/: QAboutDialog.cxx  QAboutDialog.h  QAdministratorPasswordDialog.cxx  QAdministratorPasswordDialog.h  QAdministratorPasswordDialog.ui  QAlderApplication.h  QLoginDialog.h  QMainAlderWindow.cxx  QMainAlderWindow.h  QMainAlderWindow.ui  QSelectStudyDialog.cxx  QUserListDialog.h  QUserListDialog.ui  QUsersDialog.cxx  QUsersDialog.h  QUsersDialog.ui
api/vtk/: vtkAlderCornerAnnotation.cxx  vtkAlderCornerAnnotation.h  vtkAlderDatabase.cxx  vtkAlderDatabase.h  vtkAlderMySQLDatabase.cxx  vtkAlderMySQLDatabase.h  vtkAlderMySQLDatabasePrivate.h  vtkAlderMySQLQuery.cxx  vtkAlderMySQLQuery.h  vtkAnimationPlayer.cxx  vtkAnimationPlayer.h  vtkCVSessionReader.cxx  vtkCVSessionReader.h  vtkCVSessionWriter.cxx  vtkCVSessionWriter.h  vtkCVView.cxx  vtkCVView.h  vtkCustomCornerAnnotation.cxx  vtkCustomCornerAnnotation.h  vtkCustomInteractorStyleImage.cxx  vtkCustomInteractorStyleImage.h  vtkFrameAnimationPlayer.cxx  vtkFrameAnimationPlayer.h  vtkImageCoordinateWidget.cxx  vtkImageCoordinateWidget.h  vtkImageDataReader.cxx  vtkImageDataReader.h  vtkImageWindowLevel.cxx  vtkImageWindowLevel.h  vtkMedicalImageViewer.cxx  vtkMedicalImageViewer.h  vtkXMLConfigurationFileReader.cxx  vtkXMLConfigurationFileReader.h  vtkXMLDatabaseFileReader.cxx  vtkXMLDatabaseFileReader.h  vtkXMLFileReader.cxx  vtkXMLFileReader.h  vtkXMLFileWriter.cxx  vtkXMLFileWriter.h  vtkXMLSessionFileReader.cxx  (+3 more)
aux/: alder.desktop.in  config.xml  database.xml  hash.cxx  init_config
aux/Opal/: Exam.xml  Interview.xml  Study.xml
doc/: build_dox  config.dox  config.dox.in  controller.txt  database.mwb  database.mwb.bak  database.txt  doc_mainpage.dox.in  doc_makeall.cmake.in  help.txt  models.txt  readme  view.txt
sql/: Modality.sql  sample.sql  schema.sql
sql/upgrade/1.1/: Exam.sql  Image.sql  PatchDatabase.sql  Rating.sql  UserHasModality.sql
sql/upgrade/1.2/: Image.sql  PatchDatabase.sql
src/: Alder.cxx  AlderConfig.h.in  Utilities.h.in  readme
src/application/: Alder.cxx  CMakeLists.txt  QAlderApplication.cxx  QMainAlderWindow.cxx  QMainAlderWindow.h  QMainAlderWindow.ui
src/business/: ActiveRecord.cxx  ActiveRecord.h  Application.cxx  Application.h  CMakeLists.txt  Configuration.cxx  Configuration.h  Database.cxx  Database.h  Exam.cxx  Exam.h  Image.cxx  Image.h  Interview.cxx  Interview.h  Modality.cxx  Modality.h  ModelObject.cxx  ModelObject.h  OpalService.cxx  OpalService.h  QueryModifier.cxx  QueryModifier.h  Rating.cxx  Rating.h  User.cxx  User.h
src/common/: CMakeLists.txt  Utilities.cxx  Utilities.h
src/interface/qt/: QAboutDialog.cxx  QLoginDialog.cxx  QMainAlderWindow.cxx  QMainAlderWindow.h  (+10 more)
src/interface/qt/generic/: CMakeLists.txt  QAboutDialog.cxx  QAboutDialog.h  QAlderDicomTagWidget.cxx  QAlderDicomTagWidget.h  QAlderDoubleSlider.cxx  QAlderDoubleSlider.h  QAlderFramePlayerWidget.cxx  QAlderFramePlayerWidget.h  QAlderSliderWidget.cxx  QAlderSliderWidget.h  QMedicalImageWidget.cxx  QMedicalImageWidget.h
src/interface/qt/generic/resources/: QAlderGenericWidgets.qrc
src/interface/qt/model/: CMakeLists.txt  QAlderAtlasWidget.cxx  QAlderAtlasWidget.h  QAlderInterviewWidget.cxx  QAlderInterviewWidget.h  QAlderInterviewWidget.ui  QChangePasswordDialog.cxx  QChangePasswordDialog.h  QChangePasswordDialog.ui  QLoginDialog.cxx  QSelectInterviewDialog.cxx  QSelectInterviewDialog.h  QSelectInterviewDialog.ui  QUserListDialog.cxx  QUserListDialog.h  QVTKProgressDialog.cxx  QVTKProgressDialog.h
src/interface/qt/model/resources/: QAlderModelWidgets.qrc
src/model/: ActiveRecord.cxx  ActiveRecord.h  Application.cxx  Application.h  CMakeLists.txt  Configuration.cxx  Database.cxx  Exam.cxx  Exam.h  Image.cxx  Interview.cxx  Interview.h  OpalService.h  QueryModifier.cxx  User.cxx  User.h
src/programs/: CMakeLists.txt
src/programs/dexaclean/: CMakeLists.txt  DexaClean.cxx
src/vtk/: CMakeLists.txt  vtkAlderMySQLDatabase.cxx  vtkAlderMySQLDatabase.h  vtkAlderMySQLQuery.cxx  vtkAlderMySQLQuery.h  vtkAnimationPlayer.cxx  vtkAnimationPlayer.h  vtkCustomCornerAnnotation.cxx  vtkCustomCornerAnnotation.h  vtkCustomInteractorStyleImage.h  vtkFrameAnimationPlayer.cxx  vtkImageCoordinateWidget.cxx  vtkImageCoordinateWidget.h  vtkImageDataReader.cxx  vtkImageDataReader.h  vtkImageWindowLevel.cxx  vtkMedicalImageViewer.cxx  vtkMedicalImageViewer.h  vtkXMLConfigurationFileReader.cxx  vtkXMLConfigurationFileReader.h  vtkXMLFileReader.cxx  vtkXMLFileReader.h
testing/: CMakeLists.txt  DemangledBackTrace.cxx  OpalHttp.cxx
(+26 files in other folders)
