PROJECT(AlderCommon)

SET(AlderCommon_SRCS
  Utilities.cxx
)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CRYPTO++_INCLUDE_DIR}
  ${JSONCPP_INCLUDE_DIR}
  #${LIBXML2_INCLUDE_DIR}
  #${MYSQL_INCLUDE_DIRECTORIES}
)

ADD_LIBRARY( AlderCommon ${AlderCommon_SRCS} )

TARGET_LINK_LIBRARIES( AlderCommon
  ${CRYPTO++_LIBRARIES}
  ${JSONCPP_LIBRARIES}
  
  #${MYSQL_LIBRARY}
  #${LIBXML2_LIBRARIES}
)

INSTALL( TARGETS AlderCommon DESTINATION bin )
