PROJECT(AlderCommon)

SET(AlderCommon_SRCS
  Utilities.cxx
)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CRYPTO++_INCLUDE_DIR}
  #${JSONCPP_INCLUDE_DIR}
)

ADD_LIBRARY( AlderCommon ${AlderCommon_SRCS} )

TARGET_LINK_LIBRARIES( AlderCommon
  ${CRYPTO++_LIBRARIES}
  #${JSONCPP_LIBRARIES}
)

INSTALL( TARGETS AlderCommon
  ARCHIVE DESTINATION lib 
  LIBRARY DESTINATION lib
  COMPONENT library
)
