PROJECT( DexaClean )

INCLUDE_DIRECTORIES(
  ${ALDER_COMMON_DIR}
  ${ALDER_BUSINESS_DIR}
  ${ALDER_VTK_DIR}
  ${CRYPTO++_INCLUDE_DIR}
)

ADD_EXECUTABLE( ${PROJECT_NAME} ${PROJECT_NAME}.cxx )

TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
  AlderCommon
  AlderBusiness
  AlderVTK
)

INSTALL( TARGETS ${PROJECT_NAME}
  RUNTIME DESTINATION bin
)
